src/styles/config/_config.scss
@use 'dark-colors' as dark;

@use '~sprucecss/scss/spruce' with (
  $colors: (
    base: (
      card-border: hsl(220 32% 87%),
      primary-lightest: hsl(259 53% 94%),
      primary-dark: hsl(261deg 52% 35%),
      primary-darkest: hsl(272 100% 9%),
      heading: hsl(0 0% 0%),
      footer-background: hsl(222 100% 98%),
      code-tab-background: hsl(222 100% 98%)
    ),
    btn: (
      install-background: hsl(0 0% 95%),
      install-background-hover: hsl(0 0% 90%),
      install-foreground: hsl(0 0% 10%),
      decline-background: hsl(207 39% 17%),
      decline-foreground: hsl(0 0% 100%),
      discrete-background: hsla(206 40% 17% / 0.1),
      discrete-background-hover: hsl(262 71% 49%),
      discrete-foreground: hsl(0 0% 10%),
      discrete-foreground-hover: hsl(0 0% 100%)
    ),
    cookie: (
      background: hsl(207 95% 8%),
      foreground: hsl(0 0% 100%),
    ),
    scrollbar: (
      thumb-background: hsl(0 0% 0% / 0.15),
      thumb-background-hover:	hsl(0 0% 0% / 0.25),
      track-background:	hsl(0 0% 0% / 0.05)
    ),
    breadcrumb: (
      arrow: hsl(0 0% 0% / 0.1)
    ),
    prism: (
      color: hsl(243 14% 29%),
      background: hsl(0 0% 98%),
      comment: hsl(225 14% 46%),
      punctuation: hsl(279 50% 53%),
      namespace: hsl(173 100% 24%),
      deleted: hsla(1 83% 63% / 0.56),
      boolean: hsl(0 44% 53%),
      number: hsl(315 90% 35%),
      constant: rgb(63, 107, 202),
      class-name: hsl(0 0% 7%),
      regex: hsl(1 48% 59%)
    )
  ),
  $dark-colors: dark.$colors,
  $font-size-base: 1.063rem,
  $font-size-ratio: 1.25,
  $container-width: 88rem,
  $form-control-font-size: 1rem,
  $btn-font-size: 1rem
);

